Updated packages and introduced express validator adding custom validations to the form

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "body-parser": "*",
     "ejs": "*",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-validator": "*"
   },
   "name": "revolutionvending",
   "version": "1.0.0",
